--- a/01 IoC 컨테이너/06 프로파일.md
+++ b/01 IoC 컨테이너/06 프로파일.md
@@ -5,23 +5,33 @@
       
 이를 해결하기 위해 **`로컬(local)`, `개발(dev)`, `테스트(test)`, `운영(prod)`에 대해서 설정 값을 다르게** 하고 있으며        
 번거롭지 않게 **파일로 관리해 배포 환경에 따라 설정할 수 있도록 `스프링 프로파일`이라는 기능을 사용한다.**    
-      
-**프로파일 정의하기**    
-* **클래스에 정의**
-  * @Configuration @Profile(“test”)
-  * @Component @Profile(“test”)
-* **메소드에 정의**    
-  * @Bean @Profile(“test”)
     
 **스프링 프로파일이란?**          
 일종의 **빈들의 그룹**이라고 표현을 할 수 있으며              
 애플리케이션 구성의 일부를 분리하고 특정 환경에서만 사용할 수 있도록 하는 방법을 제공한다.            
 즉, 각각의 프로필에 설정된 값들은 다른 프로필에 간섭받지 않고 독립적인 작업을 수행한다.             
-        
+           
 # @Profile            
-스프링 빈(Bean)에 대해서 그룹핑을 진행해주는 어노테이션이다.               
-애플리케이션의 `profile`이 `@Profile("프로파일 값")`과 일치하지 않을 경우 빈 등록을 진행하지도 않는다.        
-말 그대로 `@Profile("프로파일 값")`이 일치해야 동작을 수행하도록 제한을 두는 것이다.    
+스프링 빈(Bean)에 대해서 그룹핑을 진행해주는 어노테이션이다.                 
+애플리케이션의 `profile`이 `@Profile("프로파일 값")`과 일치하지 않을 경우 빈 등록을 진행하지도 않는다.          
+말 그대로 `@Profile("프로파일 값")`이 일치해야 동작을 수행하도록 제한을 두는 것이다.      
+   
+```java
+@Profile("default")
+```
+대부분, 단일 프로파일을 사용한다.        
+     
+```java
+@Profile("local, test")
+```   
+물론, 다중 프로파일 설정도 가능하다.       
+          
+**프로파일 정의하기**      
+* **클래스에 정의**    
+  * @Configuration @Profile(“test”)   
+  * @Component @Profile(“test”)   
+* **메소드에 정의**    
+  * @Bean @Profile(“test”)   
   
 ## @Profile("default") 의 사실과 오해  
 ```java
