--- a/01 IoC 컨테이너/07 프로퍼티.md
+++ b/01 IoC 컨테이너/07 프로퍼티.md
@@ -4,7 +4,7 @@
 특히 `Spring boot` 에서는 `autoConfiguration` 과 관련하여 빈 설정을 쉽게 할 수 있다는 장점이 있다.                          
 그렇기에 프로퍼티에 대해서 제대로 정리를 해보고 이를 통해 알맞게 프로퍼티를 사용하는 능력을 기르고자 한다.                     
             
-# 환경 프로퍼티 파일   
+# 📗 환경 프로퍼티 파일   
 `Spring boot` 프로퍼티 파일은 **설정 관련 및 기타 정적인 값을 `key/value` 형식으로 관리한다.**           
 이 파일을 사용하면 **기존 스프링 프레임워크의 복잡한 XML 설정을 파일 하나로 대체할 수 있다.**           
              
@@ -25,7 +25,7 @@ server:
 **properties vs yml 🤔**         
 * `application.properties` 와 `application.yml`이 동시에 존재하면 `.yml` 파일이 실행된다.   
       
-# 프로퍼티 파일 바인딩   
+# 📘 프로퍼티 파일 바인딩   
 프로퍼티 파일을 바인딩하는 방법은 아래 2가지가 존재한다.   
 
 * `@Value` 
@@ -44,7 +44,7 @@ server:
 SpEL은 런타임에 객체 참조에 대해 질의하고 조작하는 기능을 지원하는 언어다.                
 특히 **`@Value`만 사용 가능**하며 메소드 호출 및 기본 문자열 템플릿 기능을 제공하고 있다.                 
    
-## @Value   
+## 📖 @Value   
 프로퍼티의 `key`를 사용하여 특정한 값을 호출할 수 있다.              
 `key`를 정확히 입력해야 하며 값이 없을 경우에 대해서는 예외 처리를 해주어야 한다.       
 
